# n_otes

./: .env.dev  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 21c0a21b0566_.py  31ed8d5f50e3_.py  c6b74014d4da_group.py  e9c48d01a16e_user.py  ee5b25a28383_note.py
src/: config.py  main.py  middlewares.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py
src/auth/adapters/: jwt_adapter.py  password_hash_adapter.py  user_repository.py
src/auth/services/: __init__.py  authenticate_by_credentials.py  authenticate_user_by_access_token.py  base.py  refresh_tokens.py  register_user.py
src/notes/: exceptions.py  models.py  router.py  schemas.py
src/notes/services/: __init__.py  base.py  create_note.py  delete_note.py  get_note_by_id.py  get_notes.py  update_note.py
src/shared/: db.py  dependencies.py  exceptions.py  identity_provider.py  repositories.py  schemas.py  uows.py
tests/: conftest.py
tests/auth/: conftest.py  test_dependencies.py  test_login.py  test_refresh.py  test_sign_up.py
tests/notes/: conftest.py  test_create_note.py  test_delete_note.py  test_get_node_by_id.py  test_get_nodes.py  test_update_note.py
